[package]
name = "sway-thumbwheel-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bincode = { version = "1.3.3" }
clap = { version = "4.3.0", features = ["derive"] }
ctrlc = { version = "3.3.1", features = ["termination"] }
serde = { version = "1.0.163", features = ["derive"] }
swayipc = "3.0.1"
